# qa.guru.homework_18

./: pyproject.toml
tests/: test_cart.py
tests/allure-results/: d28d05ad-8146-481a-a809-ada271bf60a0-result.json
tests/utils/: log_util.py
