[tool.poetry]
name = "qa-guru-homework-18"
version = "0.1.0"
description = "Prject for API tests from homework #18"
authors = ["Lev Savinkov"]
readme = "README.md"
packages = [{ include = "qa" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.3"
allure-pytest = "^2.13.5"
selene = "2.0.0rc9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = '--clean-alluredir --alluredir=./allure-results --log-date-format="%Y-%m-%d %H:%M:%S" --log-format="%(asctime)s %(levelname)s %(message)s" --log-cli-level=INFO'
testpaths = ["tests"]